added data from additional api

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
 				</div>
 			</div>
 
-				<!-- REPEAT THE FOLLOWING DIV FOR EACH RESULT -->
 			<ul class="row js-movie-card-list">
 			</ul>
 
@@ -70,7 +69,7 @@
 	</main>
 
 	<footer role="contentinfo">
-		<p>This web app was designed by <a href="#">Alyse Bos</a> using data from <a href="https://www.tastedive.com">TasteD!ve</a> and <a href="https://www.omdbapi.com">the Open Movie Database</a>.</p>
+		<p>This web app was designed by <a href="https://github.com/alysebos">Alyse Bos</a> using data from <a href="https://www.tastedive.com">TasteD!ve</a> and <a href="https://www.omdbapi.com">the Open Movie Database</a>.</p>
 	</footer>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
