--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				</div>
 				<div class="row">
 					<div class="col-9">
-						<input name="user-movie-title" class="input-box js-input-box" id="user-movie-title" placeholder="A Goofy Movie" value="Jumanji" required>
+						<input name="user-movie-title" class="input-box js-input-box" id="user-movie-title" placeholder="A Goofy Movie" required>
 					</div>
 					<div class="col-3">
 						<button type="submit" class="submit-button">
