--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header role="banner">
 		<h1>What Movie Should I Watch?</h1>
 		<p>This small web application will give eight recommendations based on one of your favorite movies.</p>
-		<p>Just input a movie you like to start!</p>
+		<p>Just input a movie you like to start! I am working on this.</p>
 	</header>
 
 	<main role="main">
