added star string and lightbox

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 	<title>What Movie Should I Watch?</title>
 	<meta chars"et="utf-8">
-		<meta name="description" content="Recommendations for what movie you should watch based off of a movie you already like.">
+	<meta name="description" content="Recommendations for what movie you should watch based off of a movie you already like.">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
 	<link rel="stylesheet" type="text/css" href="grid.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -73,7 +76,7 @@
 	</footer>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-	<script type=""text/javascript" src="sampleData.js"></script>
+	<script src="https://cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
