--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<h1>What Movie Should I Watch?</h1>
 		<div class="row">
 			<div class="col-12">
-				<p>This small web application will recommend eight movies to watch based on a movie you already like. You can explore these movies, or look for another movie if you're not interested in any of the results.</p>
+				<p>This small web application will recommend eight movies to watch based on a movie you already like.</p>
+				<p>You can explore these movies, or look for another movie if you're not interested in any of the results.</p>
 			</div>
 		</div>
 
@@ -25,7 +26,7 @@
 			<form class="js-input-form input-form">
 				<div class="row-no-bottom-margin">
 					<div class="col-12">
-						<label for="user-movie-title">Name one movie you like!</label> 
+						<label for="user-movie-title">Enter the title of a movie you like!</label> 
 					</div>
 				</div>
 				<div class="row">
