fixed aria live issue

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 		</div>
 	</header>
 
-	<main role="main">
+	<main role="main" aria-live="assertive">
 
-		<section role="region" class="error-screen" aria-live="assertive" hidden>
+		<section role="region" class="error-screen" hidden>
 			<h2>Oops! Something didn't work quite right!</h2>
 			<div class="js-err-message">
 			</div>
 		</section>
 
-		<section role="region" class="results-screen" aria-live="assertive" hidden>
+		<section role="region" class="results-screen" hidden>
 			<h2></h2>
 
 			<ol class="masonry js-movie-card-list" role="list">
