refactored mainly by separating javascript functions into separate files which would have made things a thousand times easier if I had done that from the start... ughgghghghhg

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<header role="banner">
 		<div class="header-container">
 			<h1>What Movie Should I Watch?</h1>
-			<p>This small web application will recommend eight movies to watch based on a movie you already like.</p>
+			<p>This small web application will recommend twelve movies to watch based on a movie you already like.</p>
 			<p>You can explore these movies, or look for another movie if you're not interested in any of the results.</p>
 
 			<section role="region" class="search-screen">
@@ -58,6 +58,9 @@
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script src="https://cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript" src="api-setup.js"></script>
+	<script type="text/javascript" src="content-rendering.js"></script>
+	<script type="text/javascript" src="event-listeners.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
